fix: roles and security group subpanel alignment

--- a/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/detailview.scss
+++ b/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/detailview.scss
@@ -286,6 +286,19 @@ p.msg {
   margin-left: -1px;
 }
 
+#whole_subpanel_users {
+  position: absolute;
+  width: 100%;
+  padding-right: 18px;
+  padding-left: 1px;
+}
+
+#whole_subpanel_aclroles {
+  position: absolute;
+  width: 100%;
+  padding-right: 20px;
+}
+
 #subpanel_history .evenListRowS1 td:nth-of-type(2) a {
   border-bottom: none;
 }
